# magmaviz

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/magmaviz/: __init__.py  boxplot.py  corrplot.py  histogram.py  scatterplot.py
tests/: test_boxplot.py  test_corrplot.py  test_histogram.py  test_magmaviz.py  test_scatterplot.py
