[tool.poetry]
name = "magmaviz"
version = "0.1.0"
description = "CThis package contains four different data visualization functions with the magma theme for EDA."
authors = ["Mukund Iyer"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
